nine day-eleven day task

--- a/layout.html
+++ b/layout.html
@@ -26,6 +26,12 @@
         <div class="head-right">
             <div class="inner"></div>
         </div>
+		<div class="mainBox">
+			<div class="mainBoxMiddle">
+				<div class="box1 clearfloat">
+					<div class="minBox1">This is Conten1</div>
+					<div class="minBox1">MaybeContent 2</div>
+					<div class="minBox1">Content 3</div>
     </div>
      <div class="banner">
         <div class="banner-left">
@@ -39,14 +45,8 @@
                 <div class="number" id="four">4</div>  
             </div>
          </div>
-        <div class="banner-right">
-            <div class="inner"></div>
         </div> 
         
     </div>
-    <div class="nav"></div>
-    <div class="main"></div>
-    <div class="foot"></div>
-
 </body>
 </html>
