--- a/31-33/js_33.html
+++ b/31-33/js_33.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    <!-- <select id="region-select">
+    <select id="region-select">
         <option>华东</option>
         <option>华南</option>
         <option>华北</option>
@@ -17,7 +17,7 @@
         <option>手机</option>
         <option>笔记本</option>
         <option>智能音箱</option>
-    </select> -->
+    </select>
 
     <div id="region-radio-select">
         
@@ -28,6 +28,9 @@
     <div id="table-wrapper">
     </div>
   
-    <script src="./ife31data.js" ></script>
+    <script src="js/ife31data.js" ></script>
+    <script src="js/checkBox.js"></script>
+    <script src="js/table.js" ></script>
+
 </body>
 </html>
